--- a/src/Components/AddItem.css
+++ b/src/Components/AddItem.css
@@ -14,7 +14,7 @@
 .Buttons input:focus,
 .Buttons input:hover,
 .Buttons button:hover {
-    box-shadow: 1px 2px 4px white;;
+    box-shadow: 1px 2px 4px white;
 }
 
 .Buttons button {
