--- a/src/Components/AddItem.css
+++ b/src/Components/AddItem.css
@@ -1,28 +1,29 @@
 .Buttons input {
-    margin-right: 1rem;
+  margin-right: 1rem;
 }
 
-.Buttons button,
+.Button,
 .Buttons input {
-    border: 1px solid white;
-    background: #282c34;
-    color: white;
-    padding: .3rem;
-    font-size: 1.1rem;
+  border: 1px solid white;
+  background: #282c34;
+  color: white;
+  padding: 0.3rem;
+  font-size: 1.1rem;
 }
 
 .Buttons input:focus,
 .Buttons input:hover,
-.Buttons button:hover {
-    box-shadow: 1px 2px 4px white;
+.Button:hover {
+  box-shadow: 1px 2px 4px white;
 }
 
-.Buttons button {
-    cursor: pointer;
+.Button {
+  display: inline-flex;
+  cursor: pointer;
 }
 
 .Alert {
-    color: red;
-    font-size: 1rem;
-    margin-top: .5rem;
+  color: red;
+  font-size: 1rem;
+  margin-top: 0.5rem;
 }
